# ai_flashcards

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  PHASE1.md  PHASE2.md  PHASE3.md  PLAN.md  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: routes_health.py
backend/app/api/v1/: __init__.py  routes_deck.py  routes_health.py
backend/app/db/: models.py  session.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 20260212_235000_create_decks_and_cards_tables.py
backend/app/middleware/: request_id.py
backend/app/prompts/: registry.py
backend/app/schemas/: __init__.py  deck.py  example.py
backend/app/services/: llm_client.py
backend/tests/unit/: test_deck.py  test_example_schemas.py  test_health.py  test_llm_client.py  test_prompts.py  test_schemas.py
docs/: DATA_RETENTION.md  ERRORS.md  RAG_SAFETY.md
docs/schemas/: deck.schema.json  example.schema.json
docs/schemas/examples/: deck-no-rag.example.json  deck.example.json  example.example.json
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
frontend/__tests__/: page.test.tsx
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/deck/[deckId]/: page.tsx
frontend/src/components/flashcards/: DeckSwiper.tsx  Flashcard.tsx
frontend/src/lib/: api.ts
